home page looks good and aligning correctly

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -47,12 +47,12 @@ html, body {
   background-color: #4F0521;
   width: 100%;
   height: 100%;
+  margin-bottom: -50px; 
 }
 
 .logo {
   position: absolute;
   display: block;
-  margin-top: 2%;
   margin-left: 3%;
   width: 65%;
   background-size: contain;
@@ -67,7 +67,7 @@ html, body {
   width: fixed;
   height: auto;
   background: #4F0521;
-  margin-top: 20%;
+  margin-top: 10%;
   margin-bottom: 5%;
   margin-left: 10%;
   margin-right: 10%;
@@ -394,6 +394,13 @@ a:focus, a:hover {
   border-top-right-radius: 25px;
   border-bottom-right-radius: 25px;
 }
+
+.col-md-12 {
+  padding: 0; 
+  background-color: transparent;
+  border: none;
+}
+
 /* VIEW PIN MAP */
 
 #viewPins {
@@ -531,6 +538,8 @@ input {
 
 /* MEDIA QUERIES */
 
+/* MIN-WIDTH */
+
 @media only screen and (min-width: 400px) {
   .inputPin {
     position: absolute;
@@ -578,6 +587,8 @@ input {
   }
 }
 
+/* MAX-WIDTH */
+
 @media only screen and (max-width: 320px) {
   img.nav-icon {
   height: 4rem;
@@ -585,17 +596,11 @@ input {
   margin-top: 0.5rem;
   margin-bottom: 0.75rem;
   }
-  }
+}
 
-
-@media only screen and (min-width: 640px) {
-  .navbar-brand img {
-    width: 18%; 
-  }
-
-  .field.has-addons {
-    width: 40%;
-  }  
+@media only screen and (max-width: 750px) {
+#myCarousel {
+  max-width: 590px;
 }
 
 @media only screen and (min-width: 800px) {
